--- a/src/main/resources/templates/admin/customer/all.html
+++ b/src/main/resources/templates/admin/customer/all.html
@@ -1,10 +1,10 @@
-<h1 xmlns:th="http://www.w3.org/1999/xhtml">Всички Клиенти</h1>
+<h1>Всички Клиенти</h1>
 
 <div>
     <button type="button" th:onclick="'location.href = \'' + @{/admin/customer/create} + '\''">Създай</button>
 </div>
 
-<section xmlns:th="http://www.w3.org/1999/xhtml">
+<section>
     <div>
         <table>
             <tr>
