--- a/src/main/resources/templates/car/available.html
+++ b/src/main/resources/templates/car/available.html
@@ -26,6 +26,7 @@
                                         <li>Превключване: <strong>[[${car.transmission}]]</strong></li>
                                         <li>Климатик: <strong>Да</strong></li>
                                         <li>Минимална възраст: <strong>25 години</strong></li>
+                                        <li>Брой места: <strong>[[${car.seatCount}]]</strong></li>
                                     </ul>
                                 </div>
                             </div>
