--- a/src/main/resources/templates/admin/car/create.html
+++ b/src/main/resources/templates/admin/car/create.html
@@ -7,7 +7,10 @@
                 <input type="text" id="name" name="name" th:value="${car.name}" />
 
                 <label for="price">Цена</label>
-                <input type="text" id="price" name="price" th:value="${car.price}"/>
+                <input type="number" id="price" name="price" th:value="${car.price}"/>
+
+                <label for="seatCount">Брой седалки</label>
+                <input type="number" id="seatCount" name="seatCount" th:value="${car.seatCount}"/>
 
                 <label for="imgURL">URL на картинка</label>
                 <input type="text" id="imgURL" name="imgURL" th:value="${car.imgURL}"/>
