--- a/src/main/resources/templates/car/search.html
+++ b/src/main/resources/templates/car/search.html
@@ -43,11 +43,11 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <!--<div class="row">
                 <div class="col-md-12 col-sm-12">
                     <button type="button" class="btn btn-block" onclick="location.href = '/#map'">Вижте адреса</button>
                 </div>
-            </div>
+            </div>-->
             <div>
                 <p style="color: red; font-size: 20px; text-align: center;" id="error"></p>
             </div>
