Minor bugs fixed

--- a/src/main/resources/templates/admin/bookRequest/accept.html
+++ b/src/main/resources/templates/admin/bookRequest/accept.html
@@ -2,7 +2,8 @@
     <div>
         <table>
             <tr>
-                <th:block th:include="fragments/tableHeadImageName"></th:block>
+                <th>Снимка</th>
+		<th>Име</th>	
                 <th>Телефон</th>
 		<th>Email</th>	
 		<th>Име на клиент</th>
