--- a/src/main/resources/templates/admin/booking/delete.html
+++ b/src/main/resources/templates/admin/booking/delete.html
@@ -4,8 +4,9 @@
         <!--The car is here-->
         <table>
             <tr>
-                <th:block th:include="fragments/tableHeadImageName"></th:block>
-            </tr>
+            	<th>Снимка</th>
+            	<th>Име</th>
+	    </tr>
             <tr>
                 <td>
                     <img th:src="${car.imgURL}"/>
