Added Editing for bookings

--- a/src/main/resources/templates/admin/bookRequest/accept.html
+++ b/src/main/resources/templates/admin/bookRequest/accept.html
@@ -3,10 +3,10 @@
         <table>
             <tr>
                 <th>Снимка</th>
-		<th>Име</th>	
+                <th>Име</th>
                 <th>Телефон</th>
-		<th>Email</th>	
-		<th>Име на клиент</th>
+                <th>Email</th>
+                <th>Име на клиент</th>
                 <th>Начална дата</th>
                 <th>Крайна дата</th>
             </tr>
@@ -15,9 +15,9 @@
                 <td>[[${car.name}]]</td>
                 <td>[[${customer.phoneNumber}]]</td>
                 <td>[[${customer.email}]]</td>
-		<td th:text="${customer?.name}">Няма</td>
-                <td>[[${startDate}]]</td>
-                <td>[[${endDate}]]</td>
+                <td th:text="${customer?.name}">Няма</td>
+                <td>[[${#dates.format(requested.startDate, 'dd-MM-yyyy')}]]</td>
+                <td>[[${#dates.format(requested.endDate, 'dd-MM-yyyy')}]]</td>
             </tr>
         </table>
         <form th:action="@{/admin/bookRequest/{id}/accept(id=${id})}" method="POST">
