Fixed required attribute on input

--- a/src/main/resources/templates/car/book.html
+++ b/src/main/resources/templates/car/book.html
@@ -25,6 +25,7 @@
                                     </div>
                                     <div>
                                         <form th:action="@{/car/{id}/book(id=${car.id})}" id="confirmForm" method="POST" >
+					    <input type="submit" style="display: none" id="confirmButton"/>
                                             <div class="formrow" th:with="deposit = ${totalPrice*25/100}">
                                                 <input type="hidden" id="startDate" name="startDate" th:value="${param.datetime_pick[0]}" />
                                                 <input type="hidden" id="endDate" name="endDate" th:value="${param.datetime_off[0]}"/>
@@ -35,7 +36,7 @@
                                                 <input type="email" class="custom-input" id="email" name="email" th:value="${customer.email}" required="required" />
 
                                                 <label for="phoneNumber">Телефон</label>
-                                                <input type="tel" id="phoneNumber" name="phoneNumber" th:value="${customer.phoneNumber}" class="custom-input" />
+                                                <input type="tel" id="phoneNumber" name="phoneNumber" th:value="${customer.phoneNumber}" class="custom-input" required="required"/>
                                                 <script th:src="@{/intl-tel-input-12.1.0/build/js/intlTelInput.js}" type="text/javascript"></script>
 
                                                 <script>
@@ -55,7 +56,7 @@
                                             </div>
                                         </form>
                                     </div>
-                                    <a href="javascript:{}" onclick="document.getElementById('confirmForm').submit();" class="readmore">Потвърди заявката<i class="fa fa-caret-right" aria-hidden="true"></i></a>
+                                    <a href="javascript:{}" onclick="document.getElementById('confirmButton').click();" class="readmore">Потвърди заявката<i class="fa fa-caret-right" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </li>
