--- a/src/main/resources/templates/admin/booking/delete.html
+++ b/src/main/resources/templates/admin/booking/delete.html
@@ -20,12 +20,12 @@
     <div>
         <table>
             <tr>
-                <th>Име на клиент</th>
                 <th>Телефон на клиент</th>
+                <th>Email на клиент</th>
             </tr>
             <tr>
-                <td>[[${customer.name}]]</td>
                 <td>[[${customer.phoneNumber}]]</td>
+                <td>[[${customer.email}]]</td>
             </tr>
         </table>
     </div>
