--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,13 +1,4 @@
 <head xmlns:th="http://www.springframework.org/schema/data/jaxb">
-    <!--&lt;!&ndash; Google Adsense &ndash;&gt;-->
-    <!--<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
-    <!--<script>-->
-    <!--(adsbygoogle = window.adsbygoogle || []).push({-->
-    <!--google_ad_client: "ca-pub-1870823969129961",-->
-    <!--enable_page_level_ads: true-->
-    <!--});-->
-    <!--</script>-->
-
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119032044-1"></script>
     <script>
@@ -16,6 +7,8 @@
         gtag('js', new Date());
 
         gtag('config', 'UA-119032044-1');
+        gtag('config', 'AW-824530894');
+
     </script>
 
     <meta charset="UTF-8">
