Fixed one image Sorted perfectly in bookings Fixed one name

--- a/src/main/resources/templates/admin/booking/all.html
+++ b/src/main/resources/templates/admin/booking/all.html
@@ -21,7 +21,7 @@
 				<img src="https://cdn4.iconfinder.com/data/icons/basic-elements-circle/614/781_-_Tick-512.png"/>
 			</div>
 			<div th:unless="${booking.payedDeposit}" >
-				<img src="https://cdn3.iconfinder.com/data/icons/flat-actions-icons-9/792/Tick_Mark_Dark-512.png"/>
+				<img src="http://ws.cadcorp.com/WebMapLayers/mobile/img/presales/cross2.png"/>
 			</div>
 		</td>
                 <td>
