--- a/src/main/resources/templates/admin/options.html
+++ b/src/main/resources/templates/admin/options.html
@@ -15,7 +15,7 @@
             <button onclick="location.href='/admin/bookRequest/all'">Заявки</button>
         </div>
         <div>
-            <button onclick="location.href='/admin/booking/all'">История</button>
+            <button onclick="location.href='/admin/booking/all'">Резервации</button>
         </div>
     </div>
 </section>
