--- a/src/main/resources/templates/car/search.html
+++ b/src/main/resources/templates/car/search.html
@@ -2,12 +2,12 @@
 <div class="container" id="search">
     <div class="bformBox">
         <h3>РЕЗЕРВИРАЙТЕ КОЛА ДНЕС!</h3>
-        <form th:action="@{/car/search}" method="POST" onsubmit="return submition()">
+        <form id="searchForm" th:action="@{/car/search}" method="POST" onsubmit="return submission()">
             <div class="row">
                 <div class="col-md-6 col-sm-6">
                     <div class="formrow">
                         <div class="input-group"> <span class="input-group-addon"><i class="fa fa-map-marker" aria-hidden="true"></i> Място на взимане</span>
-                            <select class="form-control" data-live-search="true" name="pickup" id="pickup" required="required" />
+                            <select class="form-control" data-live-search="true" name="pickup" id="pickup" required="required" >
                                 <option value="">Mясто на взимане</option>
                                 <option>Sofia</option>
                             </select>
@@ -27,7 +27,7 @@
                 <div class="col-md-6 col-sm-6">
                     <div class="formrow">
                         <div class="input-group"> <span class="input-group-addon"><i class="fa fa-map-marker" aria-hidden="true"></i> Място на връщане</span>
-                            <select class="form-control" data-live-search="true" name="dropoff" id="drop" required="required"/>
+                            <select class="form-control" data-live-search="true" name="dropoff" id="drop" required="required">
                                 <option value="" >Mясто на връщане</option>
                                 <option>Sofia</option>
                             </select>
@@ -79,13 +79,9 @@
         return isOk;
 	}
 
-   	function submition() {
+   	function submission() {
         let filled = checkDates();
         if (!filled) $("#error").text("Моля попълнете и двете дати!");
         return filled;
     }
-
-	$('#buildDate').change(function() {
-	  checkDates();
-	});
 </script>
