--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -5,10 +5,8 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-
         gtag('config', 'UA-119032044-1');
         gtag('config', 'AW-824530894');
-
     </script>
 
     <meta charset="UTF-8">
@@ -34,16 +32,15 @@
 
     <!-- Owl Carousel css -->
     <link rel="stylesheet" th:href="@{/css/owl.theme.css}">
-    <link rel="stylesheet" th:href="@{/css/owl.carousel.css}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
 
     <!-- Main css -->
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <!-- Todo -->
     <link rel="stylesheet" th:href="@{/intl-tel-input-12.1.0/build/css/intlTelInput.css}">
-
-
+    
     <!-- Must be in this order!! -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script th:src="@{/js/smoothscroll.js}"></script>
 
 </head>
