--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -8,7 +8,8 @@
 <script th:src="@{/js/magnific-popup-options.js}"></script>
 
 <!-- Carousel -->
-<script th:src="@{/js/owl.carousel.js}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.17.0/jquery.validate.min.js"></script>
 
 <!-- Sticky Header -->
 <script th:src="@{/js/jquery.sticky.js}"></script>
@@ -21,3 +22,4 @@
 
 <!-- Custom -->
 <script th:src="@{/js/custom.js}"></script>
+
