Added a newert datetimepicker with linked pickers Added a schedule of the bookings in admin... Google rank tag added th:switch to car.transmission to display in bg Added another service to services and updated grid layout Added meta site description Added LPG instead of TRAFFIC in availables page Fixed carousel Fixed paypal accounts Added more info in banner

--- a/src/main/resources/templates/admin/bookRequest/accept.html
+++ b/src/main/resources/templates/admin/bookRequest/accept.html
@@ -10,7 +10,7 @@
                 <th>Крайна дата</th>
             </tr>
             <tr>
-                <td><img th:src="${car.imgURL}"/></td>
+                <td><img th:src="${car.imgUrl}"/></td>
                 <td>[[${car.name}]]</td>
                 <td>[[${customer.phoneNumber}]]</td>
                 <td>[[${customer.email}]]</td>
