--- a/src/main/resources/templates/admin/booking/delete.html
+++ b/src/main/resources/templates/admin/booking/delete.html
@@ -9,7 +9,7 @@
 	    </tr>
             <tr>
                 <td>
-                    <img th:src="${car.imgURL}"/>
+                    <img th:src="${car.imgUrl}"/>
                 </td>
                 <td>[[${car.name}]]</td>
             </tr>
