--- a/src/main/resources/templates/admin/car/all.html
+++ b/src/main/resources/templates/admin/car/all.html
@@ -20,7 +20,7 @@
             <th:block th:each="car : ${cars}">
             <tr>
                 <td>
-                    <img th:src="${car.imgURL}"/>
+                    <img th:src="${car.imgUrl}"/>
                 </td>
                 <td>[[${car.name}]]</td>
                 <td>[[${car.price}]]</td>
