--- a/src/main/resources/templates/admin/options.html
+++ b/src/main/resources/templates/admin/options.html
@@ -17,5 +17,8 @@
         <div>
             <button onclick="location.href='/admin/booking/all'">Резервации</button>
         </div>
+        <div>
+            <button onclick="location.href='/admin/booking/toDoNext'">График</button>
+        </div>
     </div>
 </section>
