--- a/src/main/resources/templates/car/book.html
+++ b/src/main/resources/templates/car/book.html
@@ -14,7 +14,7 @@
                         <li>
                             <div class="row">
                                 <div class="col-md-5">
-                                    <div class="postimg"><img th:src="${car.imgURL}" alt="Car image"></div>
+                                    <div class="postimg"><img th:src="${car.imgUrl}" alt="Car image"></div>
                                 </div>
                                 <div class="col-md-7">
                                     <div class="post-header">
