--- a/src/main/resources/templates/fragments/banner.html
+++ b/src/main/resources/templates/fragments/banner.html
@@ -10,7 +10,7 @@
 					<div>
 						<p style="font-size: 20px; text-align: center;">
                             За заявка може директно да се обадите или да видите цените и колите след потърсване (по-долу)<br/>
-							Ако искате да я вземте директно от "Летище София" - такса &euro;10<br/>
+                            Кола за 10+ дни - безплатна доставка навсякъде в София<br/>
                             Заплащането става при взимане на автомобила. Само в брой. </p>
                 	</div>
                     <a href="/#about" class="btn btn-default section-btn">Започнете</a> </div>
