--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -12,14 +12,11 @@
     <meta charset="UTF-8">
     <title th:if="${pageTitle}" th:text="${pageTitle}"></title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
-    <meta name="description" content="Car Rental One Page HTML Template">
-    <meta name="keywords" content="one page, html, template, car, car rental, taxi, cab, booking, responsive, business">
-    <meta name="author" content="Rumen Barzanov">
+    <meta name="description" content="Американски коли под наем и транспортни услуги, джипове и бусове 8 + 1">
+    <meta name="google-site-verification" content="uOe4imOiHaUP0RYLvjeltkBE8s1GT5i2-7Ucv3fjvcI" />
+    <meta name="keywords" content="коли под наем софия, бусове под наем софия, бус под наем софия, кола под наем софия">
+    <meta name="author" content="Denis Barzanov">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-    <!-- Bootstrap css -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.8.0/css/bootstrap-datepicker.min.css" />
 
     <!-- Animate.css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
@@ -33,14 +30,27 @@
     <!-- Owl Carousel css -->
     <link rel="stylesheet" th:href="@{/css/owl.theme.css}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/assets/owl.carousel.min.css">
-
-    <!-- Main css -->
-    <link rel="stylesheet" th:href="@{/css/style.css}">
-    <!-- Todo -->
+    
     <link rel="stylesheet" th:href="@{/intl-tel-input-12.1.0/build/css/intlTelInput.css}">
     
-    <!-- Must be in this order!! -->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+	<!--From-->
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
+
+	<!-- Optional theme -->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" />
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+	<script th:src="@{/js/bootstrap.min.js}"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
+
+	<!--To-->
+
     <script th:src="@{/js/smoothscroll.js}"></script>
+
+	<!-- Main css -->
+    <link rel="stylesheet" th:href="@{/css/style.css}">
 
 </head>
