--- a/src/main/resources/templates/admin/booking/all.html
+++ b/src/main/resources/templates/admin/booking/all.html
@@ -12,18 +12,18 @@
         <th:block th:each="booking : ${bookings}">
             <tr>
                 <td>
-                    <img th:src="${booking.car.imgURL}"/>
+                    <img th:src="${booking.car.imgUrl}"/>
                 </td>
                 <td>[[${#dates.format(booking.startDate, 'dd-MM-yyyy')}]]</td>
                 <td>[[${#dates.format(booking.endDate, 'dd-MM-yyyy')}]]</td>
                 <td>
-			<div th:if="${booking.payedDeposit}" >
-				<img src="https://cdn4.iconfinder.com/data/icons/basic-elements-circle/614/781_-_Tick-512.png"/>
+			<div th:if="${booking.earnest == 0}" >
+                <img style="height: 100px;" src="http://ws.cadcorp.com/WebMapLayers/mobile/img/presales/cross2.png"/>
 			</div>
-			<div th:unless="${booking.payedDeposit}" >
-				<img src="http://ws.cadcorp.com/WebMapLayers/mobile/img/presales/cross2.png"/>
+			<div th:unless="${booking.earnest == 0}" >
+				[[${booking.earnest}]]
 			</div>
-		</td>
+		        </td>
                 <td>
                     <div>
                         <button th:onclick="'location.href = ' + '\'' + @{/admin/booking/{id}/delete(id=${booking.id})} + '\''">Виж</button>
