--- a/src/main/resources/templates/fragments/services.html
+++ b/src/main/resources/templates/fragments/services.html
@@ -8,7 +8,7 @@
         </div>
         <div class="row">
             <!-- Service 1 -->
-            <div class="col-md-4 col-sm-6">
+            <div class="col-md-6 col-sm-6">
                 <div class="service-thumb">
                     <div class="thumb-icon"><i class="fa fa-phone" aria-hidden="true"></i></div>
                     <h4>Резервация по телефона</h4>
@@ -17,7 +17,7 @@
             </div>
 
             <!-- Service 2 -->
-            <div class="col-md-4 col-sm-6">
+            <div class="col-md-6 col-sm-6">
                 <div class="service-thumb">
                     <div class="thumb-icon"><i class="fa fa-money" aria-hidden="true"></i></div>
                     <h4>Специални намаления</h4>
@@ -25,12 +25,20 @@
                 </div>
             </div>
 
-            <!-- Service 4 -->
-            <div class="col-md-4 col-sm-6">
+            <!-- Service 3 -->
+            <div class="col-md-6 col-sm-6">
                 <div class="service-thumb">
                     <div class="thumb-icon"><i class="fa fa-umbrella" aria-hidden="true"></i></div>
                     <h4>Пълна застраховка</h4>
                     <p>Предлагаме пълна застраховка за ЕС.</p>
+                </div>
+            </div>
+            <!-- Service 3 -->
+            <div class="col-md-6 col-sm-6">
+                <div class="service-thumb">
+                    <div class="thumb-icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
+                    <h4>Безплатна доставка</h4>
+                    <p>Вземете кола за 10+ дни и ще ви я доставим навсякъде в София.</p>
                 </div>
             </div>
         </div>
